[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netmapper"
version = "0.1.0"
description = "Interactive CLI/TUI that orchestrates Nmap scans, parses XML, tracks scan metadata, compares runs, and generates reports and Graphviz maps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NetMapper contributors" }]
keywords = ["nmap", "network", "security", "scanning", "cli", "tui"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
lxml = ["lxml>=4.9"]
dev = ["pytest>=7.0"]

[project.scripts]
netmapper = "netmapper.main:main"

[project.urls]
Homepage = "https://github.com/"
Repository = "https://github.com/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
netmapper = ["reporting/templates/*.xsl", "reporting/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
